# remotecache

./: .bazelproject  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  maven_install.json
src/main/java/me/blorente/remotecache/: ACImpl.java  BUILD.bazel  ByteStreamImpl.java  CASImpl.java  CacheStorage.java  CapabilitiesImpl.java  LRUCache.java  README.md  RemoteCache.java
src/test/java/me/blorente/remotecache/: BUILD.bazel  CacheStorageTests.java  ExampleTest.java
tools/: build-deployable.sh  format.sh  sync-deps.sh
