load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")

# gazelle:prefix blorente.me/remotecache
# gazelle:java_maven_install_file maven_install.json
gazelle(
    name = "gazelle",
    gazelle = ":gazelle_bin",
)

gazelle_binary(
    name = "gazelle_bin",
    languages = DEFAULT_LANGUAGES + [
        "@contrib_rules_jvm//java/gazelle",
    ],
)

buildifier(
    name = "buildifier.fix",
    exclude_patterns = [
        "./.git/*",
    ],
    lint_mode = "warn",
)

# Adapted from https://github.com/bazelbuild/tools_remote/blob/8ac4b7595baa239e1eee4785547c5dcb7587e11c/BUILD#L1
# We can't use that binary because `tools_remote` doesn't play well with bzlmod.
java_binary(
    name = "remote_client",
    main_class = "com.google.devtools.build.remote.client.RemoteClient",
    deps = [
        "@tools_remote//src/main/java/com/google/devtools/build/remote/client",
        "@io_grpc_grpc_java//api",
    ],
)