load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@grpc-java//:java_grpc_library.bzl", "java_grpc_library")

# gazelle:prefix blorente.me/remotecache
# gazelle:java_maven_install_file maven_install.json
gazelle(
    name = "gazelle",
    gazelle = ":gazelle_bin",
)

gazelle_binary(
    name = "gazelle_bin",
    languages = DEFAULT_LANGUAGES + [
        "@contrib_rules_jvm//java/gazelle",
    ],
)

buildifier(
    name = "buildifier.fix",
    exclude_patterns = [
        "./.git/*",
    ],
)

# @remoteapis doesn't generate the Java gRPC stubs by default, so we wrap them here.
java_grpc_library(
    name = "build_bazel_remote_execution_v2_remote_execution_java_grpc",
    srcs = ["@remoteapis//build/bazel/remote/execution/v2:remote_execution_proto"],
    visibility = ["//src:__subpackages__"],
    deps = [
        "@remoteapis//build/bazel/remote/execution/v2:remote_execution_java_proto",
    ],
)

filegroup(
    name = "RemoteCache",
    srcs = ["//src/main/java/me/blorente/remotecache:RemoteCache_deploy.jar"],
)