module(name = "remotecache", version = "1.0")

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.5.0")

bazel_dep(name = "contrib_rules_jvm", version = "0.24.0")

bazel_dep(name = "rules_pkg", version = "0.10.1")
bazel_dep(name = "zlib", version = "1.3.1")

bazel_dep(name = "gazelle", version = "0.34.0")
bazel_dep(name = "buildifier_prebuilt", version = "6.4.0")
