load("@rules_java//java:defs.bzl", "java_binary", "java_library")
load("@grpc-java//:java_grpc_library.bzl", "java_grpc_library")

java_library(
    name = "remotecache",
    srcs = [
        "ACImpl.java",
        "CASImpl.java",
        "RemoteCache.java",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "@remoteapis//build/bazel/remote/execution/v2:remote_execution_java_proto",
        ":build_bazel_remote_execution_v2_remote_execution_java_grpc",
    ],  # keep
)

java_grpc_library(
    name = "build_bazel_remote_execution_v2_remote_execution_java_grpc",
    srcs = ["@remoteapis//build/bazel/remote/execution/v2:remote_execution_proto"],
    deps = [
        "@remoteapis//build/bazel/remote/execution/v2:remote_execution_java_proto",
    ],
)


java_binary(
    name = "RemoteCache",
    main_class = "me.blorente.remotecache.RemoteCache",
    visibility = ["//visibility:public"],
    runtime_deps = [":remotecache"],
)
