load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "remotecache",
    srcs = [
        "ACImpl.java",
        "ByteStreamImpl.java",
        "CASImpl.java",
        "CacheStorage.java",
        "CapabilitiesImpl.java",
        "RemoteCache.java",
    ],
    visibility = ["//:__subpackages__"],
    exports = ["@maven//:com_google_protobuf_protobuf_java"],
    runtime_deps = [
        "@maven//:io_grpc_grpc_netty_shaded",
    ],  # keep
    deps = [
        "//:build_bazel_remote_execution_v2_remote_execution_java_grpc",
        "@com_google_googleapis//google/bytestream:bytestream_java_grpc",
        "@com_google_googleapis//google/bytestream:bytestream_java_proto",
        "@com_google_protobuf//java/core",
        "@grpc-java//stub",
        "@maven//:io_grpc_grpc_api",
        "@remoteapis//build/bazel/remote/execution/v2:remote_execution_java_proto",
        "@remoteapis//build/bazel/semver:semver_java_proto",
    ],  # keep
)

java_binary(
    name = "RemoteCache",
    main_class = "me.blorente.remotecache.RemoteCache",
    visibility = ["//visibility:public"],
    runtime_deps = [":remotecache"],
)
