load("@contrib_rules_jvm//java:defs.bzl", "JUNIT5_DEPS", "java_test_suite")
load("@rules_jvm_external//:defs.bzl", "artifact")

java_test_suite(
    name = "remotecache",
    srcs = [
        "CacheStorageTests.java",
    ],
    runner = "junit5",
    test_suffixes = [
        "Test.java",
        "Tests.java",
    ],
    runtime_deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting",
    ],
    deps = [
        "//src/main/java/me/blorente/remotecache",
        "@maven//:com_google_protobuf_protobuf_java",
        "@remoteapis//build/bazel/remote/execution/v2:remote_execution_java_proto",
        artifact("com.google.guava:guava"),
        artifact("org.junit.jupiter:junit-jupiter-api"),
    ] + JUNIT5_DEPS,  # keep
)
